crates/plotnik-lib/tests/02-parser/recovery_unexpected/wrong_close_delimiter_inside_sequence.txt
{(a) ] (b)}
==== diagnostics ====
error: missing closing `}`
 --> query.ptk:1:6
  |
1 | {(a) ] (b)}
  |      ^
  |
help: add `}` to close the sequence

error: expected a pattern
 --> query.ptk:1:11
  |
1 | {(a) ] (b)}
  |           ^
  |
help: try `(node)`, `[a b]`, `{a b}`, `"literal"`, or `_`
